--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RemoteJobs</string>
     <string name="job_listing_loading_message">Loading recent jobs…</string>
+    <string name="error_message">Uh oh, something went wrong…</string>
+    <string name="touch_to_retry">Touch here to retry.</string>
 </resources>
